[package]
name = "scraperrs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel López <danielxdad@gmail.com>",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
csv = "1.1.6"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
